--- a/app/styles/scss/layout/_main.scss
+++ b/app/styles/scss/layout/_main.scss
@@ -60,3 +60,15 @@
 
 
 /* media queries */
+/*
+Screen Sizes
+Mobile Devices
+<= 600px	Tablet Devices
+> 600px	Desktop Devices
+> 992px	Large Desktop Devices
+> 1200px
+Class Prefix	.s	.m	.l	.xl
+Container Width	90%	85%	70%	70%
+Number of Columns	12	12	12	12
+
+*/
